k8s/media-services/plex-media/tautulli/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media-services
  labels:
    app: tautulli
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: ghcr.io/tautulli/tautulli:latest
        ports:
        - name: http
          containerPort: 8181
          protocol: TCP
        volumeMounts:
        - name: shared-storage
          mountPath: /config
          subPath: shared/tautulli
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: media-shared-storage
