k8s/media-services/plex-media/tautulli/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media-services
  labels:
    app: tautulli
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: tautulli
